
* update commons-logging jar versions. commons-logging:1.2

* update commons-codec jar versions. commons-codec:1.10

* update junit jar versions. junit:4.12

* move to openjdk 12

### Bug Fixes ###

* SoapUI 5.5.0 will not run project or suites - Toolkit not initialized error

-------------------------------------------------------------------------------

# SoapUI Open Source 5.5.0

#### Released 2019-02-06 ####

### Overall improvements ###

* SoapUI 5.5 introduces the Endpoint Explorer dialog. Use it to send exploratory requests and analyze responses without creating a project.

* SoapUI now supports extended HTTP methods: PROPFIND, LOCK, UNLOCK, COPY, PURGE.

* Now, if you try to open a project created in a later SoapUI version or in ReadyAPI, SoapUI will notify you about this.

* SoapUI now requires Java 8 update 112 or higher.

### Bug Fixes ###

* An invalid name was set for a custom test step.

* A bug fix by modax: WS-Security did not support Strict Layout Rules.

* A bug fix by xgcssch: When a refresh token was used to update an OAuth 2.0 access token, the refresh token was not updated.

* A bug fix by arykov: Symlinks to soapui.sh did not work.

-------------------------------------------------------------------------------

# SoapUI Open Source 5.4.0

#### Released 2017-11-29 ####

### Overall Improvements ###

* SoapUI 5.4 uses Apache Commons Collections library version 3.2.2 that fixes a security vulnerability.

* SoapUI now supports Java 1.8.

* An improvement by DonnyDepp: The window borders are now thicker, so it is easier to resize windows by dragging their borders.

### Bug Fixes ###

* A bug fix by vimil: When a response returned redirect status codes, SoapUI always simulated a GET request to the new address. Now, if the initial request uses the POST method, SoapUI simulates a POST request.

### Discontinued Support ###
