@@ -1,17 +1,17 @@
 /*
  * SoapUI, Copyright (C) 2004-2019 SmartBear Software
  *
- * Licensed under the EUPL, Version 1.1 or - as soon as they will be approved by the European Commission - subsequent 
- * versions of the EUPL (the "Licence"); 
- * You may not use this work except in compliance with the Licence. 
- * You may obtain a copy of the Licence at: 
- * 
- * http://ec.europa.eu/idabc/eupl 
- * 
- * Unless required by applicable law or agreed to in writing, software distributed under the Licence is 
- * distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
- * express or implied. See the Licence for the specific language governing permissions and limitations 
- * under the Licence. 
+ * Licensed under the EUPL, Version 1.1 or - as soon as they will be approved by the European Commission - subsequent
+ * versions of the EUPL (the "Licence");
+ * You may not use this work except in compliance with the Licence.
+ * You may obtain a copy of the Licence at:
+ *
+ * http://ec.europa.eu/idabc/eupl
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed under the Licence is
+ * distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ * express or implied. See the Licence for the specific language governing permissions and limitations
+ * under the Licence.
  */
 
 package com.eviware.soapui;
@@ -279,7 +279,7 @@ public class DefaultSoapUICore implements SoapUICore {
                     } catch (Exception e) {
                         log.warn("Wrong password.");
                         JOptionPane.showMessageDialog(null, "Wrong password, creating backup settings file [ "
-                                + settingsFile.getAbsolutePath() + ".bak.xml. ]\nSwitch to default settings.",
+                                        + settingsFile.getAbsolutePath() + ".bak.xml. ]\nSwitch to default settings.",
                                 "Error - Wrong Password", JOptionPane.ERROR_MESSAGE);
                         settingsDocument.save(new File(settingsFile.getAbsolutePath() + ".bak.xml"));
                         throw e;
@@ -355,6 +355,7 @@ public class DefaultSoapUICore implements SoapUICore {
             settings.setBoolean(ProxySettings.AUTO_PROXY, true);
             settings.setBoolean(ProxySettings.ENABLE_PROXY, true);
         }
+        setIfNotSet(SecuritySettings.DISABLE_PROJECT_LOAD_SAVE_SCRIPTS, true);
 
         boolean setWsiDir = false;
         String wsiLocationString = settings.getString(WSISettings.WSI_LOCATION, null);
