@@ -76,6 +76,7 @@ import com.eviware.soapui.model.testsuite.TestStep;
 import com.eviware.soapui.model.testsuite.TestSuite;
 import com.eviware.soapui.model.testsuite.TestSuite.TestSuiteRunType;
 import com.eviware.soapui.settings.ProjectSettings;
+import com.eviware.soapui.settings.SecuritySettings;
 import com.eviware.soapui.settings.UISettings;
 import com.eviware.soapui.settings.WsdlSettings;
 import com.eviware.soapui.support.SoapUIException;
@@ -131,6 +132,11 @@ import static com.eviware.soapui.impl.wsdl.WsdlProject.ProjectEncryptionStatus.N
 
 public class WsdlProject extends AbstractTestPropertyHolderWsdlModelItem<ProjectConfig> implements Project,
         PropertyExpansionContainer, PropertyChangeListener, TestRunnable {
+    /*???*/ // %s - the project name
+    private final static String LOAD_SCRYPT_EXECUTION_WARNING_MESSAGE = "In project '%s' we have detected Load script that may contain malicious code, if you do not want to receive this message please change the setting in preferences.";
+    /*???*/ // %s - the project name
+    private final static String SAVE_SCRYPT_EXECUTION_WARNING_MESSAGE = "In project '%s' we have detected Save script that may contain malicious code, if you do not want to receive this message please change the setting in preferences.";
+
     public final static String AFTER_LOAD_SCRIPT_PROPERTY = WsdlProject.class.getName() + "@setupScript";
     public final static String BEFORE_SAVE_SCRIPT_PROPERTY = WsdlProject.class.getName() + "@tearDownScript";
     public final static String RESOURCE_ROOT_PROPERTY = WsdlProject.class.getName() + "@resourceRoot";
@@ -1503,6 +1509,11 @@ public class WsdlProject extends AbstractTestPropertyHolderWsdlModelItem<Project
             return null;
         }
 
+        if (isLoadSaveScriptsDisabled()) {
+            log.warn(String.format(LOAD_SCRYPT_EXECUTION_WARNING_MESSAGE, getName()));
+            return null;
+        }
+
         if (afterLoadScriptEngine == null) {
             afterLoadScriptEngine = SoapUIScriptEngineRegistry.create(this);
             afterLoadScriptEngine.setScript(script);
@@ -1517,6 +1528,11 @@ public class WsdlProject extends AbstractTestPropertyHolderWsdlModelItem<Project
     public Object runBeforeSaveScript() throws Exception {
         String script = getBeforeSaveScript();
         if (StringUtils.isNullOrEmpty(script)) {
+            return null;
+        }
+
+        if (isLoadSaveScriptsDisabled()) {
+            log.warn(String.format(SAVE_SCRYPT_EXECUTION_WARNING_MESSAGE, getName()));
             return null;
         }
 
@@ -2036,5 +2052,9 @@ public class WsdlProject extends AbstractTestPropertyHolderWsdlModelItem<Project
             }
         }
         return false;
+    }
+
+    private boolean isLoadSaveScriptsDisabled() {
+        return SoapUI.getSoapUICore().getSettings().getBoolean(SecuritySettings.DISABLE_PROJECT_LOAD_SAVE_SCRIPTS);
     }
 }
